package es.edu.uah.matcomp.ej6.Mascot;

public abstract class Animal {
    private String name;
    public Animal(String name){
        this.name=name;

    }
    public abstract void greets();


}
