package es.edu.uah.matcomp.ej6.Mascot;

public class BigDog extends Dog {
    public BigDog(String name){
        super(name);

    }
    public void greets(){
        System.out.println("Wooow");
    }
    public void greets(Dog another){
        System.out.println("WoooooW");
    }
    public void greets(BigDog another){
        System.out.println("Wooooooooow");
    }
}
